initialize the repository

--- a/angular.json
+++ b/angular.json
@@ -108,12 +108,10 @@
               "zone.js/testing"
             ],
             "tsConfig": "tsconfig.spec.json",
-            "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
-            ],
+            "assets":  [
+              "src/favicon.ico",
+              "src/assets"
+            ],  
             "styles": [
               "src/styles.css"
             ],
