--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.2",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@ng-icons/bootstrap-icons": "^29.9.0",
+    "@ng-icons/core": "^29.9.0",
+    "@ng-icons/heroicons": "^29.9.0",
+    "angular-icons": "^1.0.11",
     "date-fns": "^3.6.0",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
