--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,8 @@ testem.log
 .DS_Store
 Thumbs.db
 .vercel
+
+# Environments
+src/environments/environment.ts
+src/app/environments/environment.ts
+
