--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "@ng-icons/bootstrap-icons": "^29.9.0",
     "@ng-icons/core": "^29.9.0",
     "@ng-icons/heroicons": "^29.9.0",
+    "@supabase/supabase-js": "^2.46.1",
     "angular-icons": "^1.0.11",
     "date-fns": "^3.6.0",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
-    "sweetalert2": "^11.14.5",
+    "supabase": "^1.219.2",
+    "sweetalert2": "^11.6.13",
     "tslib": "^2.3.0",
+    "uuid": "^11.0.3",
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
